--- a/source/404.html
+++ b/source/404.html
@@ -1,1 +1,46 @@
-test
+<!DOCTYPE html>
+<html lang="zxx">
+
+<!-- Head -->
+
+<head>
+
+    <title>Home</title>
+
+    <!-- Meta-Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- style CSS -->
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<!-- //Head -->
+
+<!-- Body -->
+
+<body>
+
+    <section class="w3l-main">
+        <!-- /w3l-errorhny-->
+        <div class="error-page">
+            <div class="wrapper">
+                <div class="main-cover w3">
+                    <div class="lefterr">
+                    <h2 class="oopshny">Oops!🍋<br>Page<br>&emsp;Not<br>&emsp;&emsp;Found！</h2>
+					<a href="https://blog.mrilboom.love" class="backw3l" style="margin-left: 50px;">RETURN 0 >>></a>
+                    </div>
+                    <h1 class="cover-para w3ls">404</h1>
+                </div>
+            </div>
+        </div>
+
+        <!-- //w3l-errorhny-->
+    </section>
+
+</body>
+<!-- //Body -->
+
+</html>
