--- a/source/404.html
+++ b/source/404.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="zxx">
 
 <!-- Head -->
 
 <head>
 
-    <title>Home</title>
+    <title>Err Page</title>
 
     <!-- Meta-Tags -->
     <meta charset="UTF-8">
@@ -13,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- style CSS -->
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="/css/style.css" type="text/css" media="all">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -30,7 +29,7 @@
                 <div class="main-cover w3">
                     <div class="lefterr">
                     <h2 class="oopshny">Oops!🍋<br>Page<br>&emsp;Not<br>&emsp;&emsp;Found！</h2>
-					<a href="https://blog.mrilboom.love" class="backw3l" style="margin-left: 50px;">RETURN 0 >>></a>
+					<a href="/" class="backw3l" style="margin-left: 50px;">RETURN 0 >>></a>
                     </div>
                     <h1 class="cover-para w3ls">404</h1>
                 </div>
